syntax = "proto3";

package rivet.backend.pkg.cdn.version_prepare;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/cdn.proto";

message Request {
	rivet.backend.cdn.VersionConfig config = 1;
	rivet.common.Uuid game_id = 2;
}

message Response {
	rivet.backend.cdn.VersionConfigCtx config_ctx = 1;
}
